# cadenza

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  overlay-main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  keylogger.rs  lib.rs  logging.rs  macos_layout.rs  main.rs  sentence.rs  serial.rs  shortcuts.rs  storage.rs  types.rs
src-tauri/src/coaching/: caret.rs  mod.rs  overlay.rs  permission.rs
src-tauri/src/engine/: coaching.rs  detector.rs  emit.rs  session.rs
src-tauri/src/storage/: banlist.rs  coaching.rs  combos.rs  device.rs  mod.rs  queries.rs  writes.rs
src-tauri/src/storage/coaching/: tests.rs
src-tauri/src/storage/queries/: activity.rs  lists.rs  practice.rs  proficiency.rs  recommendations.rs  suggestions.rs  wpm.rs
src/components/: ActivityFeed.tsx  AppShell.tsx  ComboKeys.tsx  DbGate.tsx  EmptyState.tsx  FlowSession.tsx  Logo.tsx  PageHeader.tsx  ProgressBar.tsx  SortableHead.tsx  StatCard.tsx  UpdateChecker.tsx  WpmChart.tsx  WpmStatRow.tsx
src/components/overlay/: CoachingSurface.tsx  SurfaceStack.tsx  SyncSurface.tsx
src/hooks/: LiveSessionContext.tsx  useBanlist.ts  useDevice.ts  useHiddenWords.ts  useLiveSession.ts  useLoggingState.ts  usePolling.ts  usePracticeDueCount.ts  usePracticeGate.ts  useProficiency.ts  useSettings.ts  useSort.ts  useSuggestions.ts  useWords.ts  useWpm.ts
src/lib/: api.ts  format.ts  overlayPanel.ts  practiceMatch.ts  types.ts
src/pages/: Dashboard.tsx  Device.tsx  Overlay.tsx  OverlayRoot.tsx  Practice.tsx  Proficiency.tsx  Settings.tsx  Suggestions.tsx  Wpm.tsx
src/pages/settings/: CoachingCard.tsx  DetectionCard.tsx  EnglishVariantCard.tsx  HiddenWordsCard.tsx  PermissionsCard.tsx  PrivacyCard.tsx  SentenceModelCard.tsx  SettingRow.tsx  ShortcutsCard.tsx
