[package]
name = "cadenza"
version = "0.0.6-alpha"
description = "Cadenza — typing analytics for CharaChorder chording devices"
authors = ["Cadenza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cadenza_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serialport = "4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dirs = "5"
once_cell = "1"
argon2 = { version = "0.5", features = ["std"] }

# macOS-only: CGEventTap-based keylogger installed on the main run loop.
# Versions match what tauri/wry already pull in (see Cargo.lock) so no
# duplicate compilation.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

# Non-macOS keylogging keeps the original rdev-on-a-thread implementation.
# On macOS rdev's key->string conversion calls TSM off the main thread, which
# aborts the process (EXC_BREAKPOINT), so we use a CGEventTap instead.
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

